TestCases/Errors/Haversine/observations/sst/spr_10_obs.spm
obs r4-c11 0.00846153846153846
obs r5-c11 0.010849358974359
obs r4-c12 0.00846153846153846
obs r5-c12 0.00676923076923077
obs r5-c13 0.00461538461538462
obs r6-c14 0.0123076923076923
obs r6-c15 0.0123076923076923
obs r6-c16 0.0607692307692308
obs r6-c17 0.04444669365722
obs r6-c18 0.0110526315789474
error_value r4-c11 0.2
error_value r5-c11 0.2
error_value r4-c12 0.2
error_value r5-c12 0.2
error_value r5-c13 0.2
error_value r6-c14 0.2
error_value r6-c15 0.2
error_value r6-c16 0.2
error_value r6-c17 0.2
error_value r6-c18 0.2
